Working on overflow issue due to AOS limited to mobile screen

--- a/myportfolio/src/assets/styles/Footer.css
+++ b/myportfolio/src/assets/styles/Footer.css
@@ -5,17 +5,14 @@
 }
 
 .footer {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     width: 100%;
-     height: 10vh;
-     background-color: #000;
-     color: white;
-     font-size: 1em;
-     position: absolute;
+     position: fixed;
      right: 0;
-     bottom: 0;
      left: 0;
-
+     bottom: 0;
+     padding: 15px;
+     text-align: right;
+     font-size: 13px;
+     color: #fff;
+     z-index: 999999;
 }
+
