--- a/myportfolio/src/assets/styles/Header.css
+++ b/myportfolio/src/assets/styles/Header.css
@@ -9,8 +9,6 @@
 .header .heading {
      font-size: 1em;
      font-weight:bold;
-     padding-top: 40px;
-     padding-bottom: 10px;
      text-decoration: none;
      color:#fff;
 }
